fix!: update spacing
Replace t-shirt size spacing with numerical scale from Tailwindcss.

https://tailwindcss.com/docs/customizing-spacing#default-spacing-scale

The values are proportional, so 16 is twice as much spacing as 8 for example. One spacing unit is equal to 0.25rem, which translates to 4px by default in common browsers.

--- a/styles/system.css
+++ b/styles/system.css
@@ -1,13 +1,36 @@
 :host, :root {
-  --cs-space-none: 0;
-  --cs-space-xxs: 0.25rem;
-  --cs-space-xs: 0.5rem;
-  --cs-space-s: 0.75rem;
-  --cs-space-m: 1rem;
-  --cs-space-l: 1.25rem;
-  --cs-space-xl: 1.5rem;
-  --cs-space-2xl: 2rem;
-  --cs-space-3xl: 2.5rem;
+  --cs-space-x0: 0;
+  --cs-space-x025: 0.063rem;
+  --cs-space-x05: 0.125rem;
+  --cs-space-x1: 0.25rem;
+  --cs-space-x2: 0.5rem;
+  --cs-space-x3: 0.75rem;
+  --cs-space-x4: 1rem;
+  --cs-space-x5: 1.25rem;
+  --cs-space-x6: 1.5rem;
+  --cs-space-x7: 1.75rem;
+  --cs-space-x8: 2rem;
+  --cs-space-x9: 2.25rem;
+  --cs-space-x10: 2.5rem;
+  --cs-space-x11: 2.75rem;
+  --cs-space-x12: 3rem;
+  --cs-space-x14: 3.5rem;
+  --cs-space-x16: 4rem;
+  --cs-space-x20: 5rem;
+  --cs-space-x24: 6rem;
+  --cs-space-x28: 7rem;
+  --cs-space-x32: 8rem;
+  --cs-space-x36: 9rem;
+  --cs-space-x40: 10rem;
+  --cs-space-x44: 11rem;
+  --cs-space-x48: 12rem;
+  --cs-space-x52: 13rem;
+  --cs-space-x56: 14rem;
+  --cs-space-x60: 15rem;
+  --cs-space-x64: 16rem;
+  --cs-space-x72: 18rem;
+  --cs-space-x80: 20rem;
+  --cs-space-x96: 24rem;
   --cs-type-sans-serif-4xl: 600 2.75rem/3.25rem -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --cs-type-sans-serif-3xl: 600 2.25rem/3rem -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
   --cs-type-sans-serif-2xl: 600 1.75rem/2.5rem -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
